config-root/namespaces/jx-staging/queue-service/queue-service-queue-service-deploy.yaml
# Source: queue-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-service-queue-service
  labels:
    draft: draft-app
    chart: "queue-service-0.0.37"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: queue-service-queue-service
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: queue-service-queue-service
    spec:
      containers:
        - name: queue-service
          image: "gcr.io/camunda-researchanddevelopment/queue-service:0.0.37"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
