config-root/namespaces/jx-staging/queue-service/queue-service-ingress.yaml
# Source: queue-service/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: queue-service
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: queue-service
              servicePort: 80
      host: queue-service-jx-staging.35.222.17.41.nip.io
